First working version of refresher
WIP:
 - refactor and clean up
 - sidecar test
 - service discovery test
 - deploy as pod

--- a/glide.yaml
+++ b/glide.yaml
@@ -1,2 +1,10 @@
 package: github.com/kameshsampath/che-stack-refresher
-import: []
+import: 
+- package: github.com/mitchellh/go-homedir
+- package: k8s.io/client-go
+  version: v3.0.0
+- package: github.com/davecgh/go-spew
+  version: v1.1.0
+- package: github.com/sirupsen/logrus
+  version: ^1.0.3
+  
