refactored to use cobra commands, WIP: install

--- a/glide.yaml
+++ b/glide.yaml
@@ -1,12 +1,13 @@
 package: github.com/kameshsampath/checontroller
-import: 
+import:
 - package: k8s.io/apimachinery
   version: 1fd2e63a9a370677308a42f24fd40c86438afddf
 - package: k8s.io/client-go
   version: ^4.0.0
 - package: github.com/sirupsen/logrus
   version: ^1.0.3
-# - package: github.com/openshift/origin
-#  version: v3.6.0
-#  subpackages:
-#    - pkg/client
+- package: github.com/spf13/cobra
+- package: github.com/spf13/viper
+  version: ~1.0.0
+- package: github.com/spf13/pflag
+  version: ~1.0.0
