--- a/glide.yaml
+++ b/glide.yaml
@@ -1,9 +1,33 @@
 package: github.com/kameshsampath/checontroller
 import:
-- package: k8s.io/apimachinery
-  version: 1fd2e63a9a370677308a42f24fd40c86438afddf
 - package: k8s.io/client-go
-  version: ^4.0.0
+  repo: https://github.com/openshift/kubernetes-client-go
+  version: release-1.7.0
+  vcs: git
+- package: k8s.io/apimachinery
+  repo: https://github.com/openshift/kubernetes-apimachinery
+  version: release-1.7.0
+  vcs: git
+- package: k8s.io/apiserver
+  repo: https://github.com/openshift/kubernetes-apiserver
+  version: release-1.7.0
+  vcs: git
+- package: k8s.io/kubernetes
+  repo: https://github.com/openshift/kubernetes
+  version: release-1.7.0
+  vcs: git
+- package: github.com/openshift/origin
+  version: master
+  subpackages:
+  - pkg/apps/apis/apps/v1
+  - pkg/authorization/apis/authorization/v1
+  - pkg/oauth/apis/oauth/v1
+  - pkg/project/apis/project/v1
+  - pkg/quota/apis/quota/v1
+  - pkg/route/apis/route/v1
+  - pkg/security/apis/security/v1
+  - pkg/template/apis/template/v1
+  - pkg/user/apis/user/v1
 - package: github.com/sirupsen/logrus
   version: ^1.0.3
 - package: github.com/spf13/cobra
